[gd_scene load_steps=5 format=3 uid="uid://cw5akhv1ds70a"]

[ext_resource type="Texture2D" uid="uid://oqangvusf2lc" path="res://image/shop/shop_menu.png" id="1_jc7a3"]
[ext_resource type="Script" path="res://scripts/ShopMenu.gd" id="2_8wn64"]
[ext_resource type="Texture2D" uid="uid://byu7bwy1ihagj" path="res://image/enemies/basic_enemy1.png" id="3_f5mrw"]
[ext_resource type="Script" path="res://scripts/ShopItemDetail.gd" id="3_tqqgs"]

[node name="ShopMenu" type="NinePatchRect"]
z_index = 2
offset_right = 1024.0
offset_bottom = 768.0
texture = ExtResource("1_jc7a3")
script = ExtResource("2_8wn64")

[node name="ShopTitle" type="Label" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 40.0
offset_right = 88.0
offset_bottom = 66.0
text = "Shop"

[node name="ShopItems" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 1000.0
offset_bottom = 576.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="RowContainer" type="VBoxContainer" parent="ShopItems"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="SelectedItem" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 600.0
offset_right = 1000.0
offset_bottom = 744.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="ItemDetail" type="HBoxContainer" parent="SelectedItem" groups=["ItemDetail"]]
layout_mode = 2
alignment = 1
script = ExtResource("3_tqqgs")

[node name="ItemTitle" type="VBoxContainer" parent="SelectedItem/ItemDetail"]
layout_mode = 2

[node name="Name" type="Label" parent="SelectedItem/ItemDetail/ItemTitle"]
layout_mode = 2
text = "Name"

[node name="Description" type="Label" parent="SelectedItem/ItemDetail/ItemTitle"]
layout_mode = 2
text = "Description"

[node name="ItemDetails" type="VFlowContainer" parent="SelectedItem/ItemDetail"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Health" type="Label" parent="SelectedItem/ItemDetail/ItemDetails"]
layout_mode = 2
text = "Max Health"

[node name="Attack" type="Label" parent="SelectedItem/ItemDetail/ItemDetails"]
layout_mode = 2
text = "Attack"

[node name="Range" type="Label" parent="SelectedItem/ItemDetail/ItemDetails"]
layout_mode = 2
text = "Range"

[node name="TurnEffect" type="Label" parent="SelectedItem/ItemDetail/ItemDetails"]
layout_mode = 2
text = "Turn Effect"

[node name="DeathEffect" type="Label" parent="SelectedItem/ItemDetail/ItemDetails"]
layout_mode = 2
text = "Death Effect"

[node name="VictoryEffect" type="Label" parent="SelectedItem/ItemDetail/ItemDetails"]
layout_mode = 2
text = "Victory Effect"

[node name="UnusedEffect" type="Label" parent="SelectedItem/ItemDetail/ItemDetails"]
layout_mode = 2
text = "Unused Effect"

[node name="BuyItem" type="VBoxContainer" parent="SelectedItem/ItemDetail"]
layout_mode = 2
alignment = 2

[node name="Cost" type="Label" parent="SelectedItem/ItemDetail/BuyItem"]
layout_mode = 2
text = "Cost"

[node name="Buy" type="Button" parent="SelectedItem/ItemDetail/BuyItem"]
layout_mode = 2
text = "Buy"

[node name="ItemImage" type="TextureRect" parent="SelectedItem/ItemDetail"]
layout_mode = 2
texture = ExtResource("3_f5mrw")
